# vstimd

./: .dockerignore  .gitignore  .gitmodules  .readthedocs.yaml  CLAUDE.md  Cargo.toml  Makefile  README.md  TODO.md  mkdocs.yml
client-python/: .gitignore  Makefile  pyproject.toml
client-python/examples/: flash_rects.py
client-python/tests/: _e2e_cases.py  _psychopy_visual_cases.py  conftest.py  requirements-psychopy.txt  test_e2e.py  test_e2e_null.py  test_psychopy_compat.py
client-python/tests/e2e/: _e2e_cases.py  _psychopy_visual_cases.py  conftest.py  test_e2e.py  test_e2e_null.py  test_psychopy_visual_null.py
client-python/tests/unit/: conftest.py
client-python/wonderlamp/: __init__.py  _connection.py
client-python/wonderlamp/_proto/: __init__.py  wonderlamp_pb2.py
client-python/wonderlamp/psychopy/: README.md
client-python/wonderlamp/psychopy/visual/: __init__.py  _colors.py  _types.py  _units.py  circle.py  rect.py  window.py
client-python/wonderlamp/stimuli/: __init__.py  _client.py  _models.py
client-python/wonderlamp/system/: _client.py
client-python/wonderlamp_client/: __init__.py  _connection.py
client-python/wonderlamp_client/_proto/: __init__.py  wonderlamp_pb2.py
client/python/: .gitignore  Makefile  README.md  make.ps1  pyproject.toml
client/python/docs/: conf.py  index.md  psychopy_users.md
client/python/docs/api/: animations.md  connection.md  exceptions.md  index.md  system.md  vtl.md
client/python/docs/api/psychopy/: circle.md  grating.md  index.md  rect.md  textbox2.md  types.md  window.md
client/python/docs/api/stimuli/: grating.md  index.md  shapes.md  text.md
client/python/examples/: flash_rects.py  interactive_grating.py  text_demo.py
client/python/tests/e2e/: _e2e_cases.py  _psychopy_visual_cases.py  conftest.py  test_e2e.py  test_e2e_null.py  test_psychopy_visual.py  test_psychopy_visual_null.py
client/python/tests/e2e/cases/: __init__.py  _helpers.py  test_animations.py  test_circle.py  test_config.py  test_ellipse.py  test_grating.py  test_outline.py  test_polygon.py  test_query.py  test_rect.py  test_shapes.py  test_shared.py  test_system.py  test_text.py  test_vtl.py
client/python/tests/unit/: test_psychopy_compat.py  test_textbox2.py  test_vtl_handle.py
client/python/vstimd/: __init__.py  _connection.py  _handles.py  connection.py  exceptions.py  response.py
client/python/vstimd/_proto/: __init__.py
client/python/vstimd/animations/: __init__.py  _client.py  _models.py  animations_client.py  animations_models.py
client/python/vstimd/psychopy/visual/: __init__.py  _colors.py  (+6 more)
client/python/vstimd/stimuli/: __init__.py  _base.py  _client.py  _grating.py  _shapes.py  color.py  grating_client.py  grating_models.py  shapes_client.py  shapes_models.py  stimuli_client.py  stimuli_models.py  text_client.py  text_models.py  vec.py
client/python/vstimd/system/: __init__.py  _client.py  system_client.py  system_models.py
client/python/vstimd/vtl/: __init__.py  _client.py  vtl_client.py  vtl_models.py
docs/: BARE_METAL_LINUX.md  FRAME_TIMING.md  PLAN.md  POLYGON_SPLINE_PLAN.md  PYTHON_CLIENT.md  STIMULUS_DATA_MODEL.md  TEXT_RENDERING_PLAN.md  deploy.md  index.md  pyproject.toml  why-vstimd.md
docs/api/: server.md
docs/api/matlab/: index.md
docs/api/python/: connection.md  index.md  psychopy.md  stimuli.md  system.md
docs/concepts/: architecture.md  coordinate-system.md  deferred-mode.md  frame-timing.md  scene-serialization.md
docs/getting-started/: bare-metal.md  installation.md  quick-start.md
docs/protocol/: commands.md  index.md
docs/stylesheets/: extra.css
docs/tutorial/: command-api.md  index.md  recording-integration.md  vtl-and-animations.md
gpiochip-daqd/: Cargo.toml  README.md  Todo.md
gpiochip-daqd/config/: gpiochip-daqd.toml  jetson-orin-nano_in16_out4.toml
gpiochip-daqd/packaging/systemd/: gpiochip-daqd.service
gpiochip-daqd/src/: bridge.rs  config.rs  main.rs
gpiochip-daqd/tests/: loopback.rs
server/: Cargo.toml  build.rs
server/benches/: tess.rs
server/proto/: wonderlamp.proto
server/shaders/: egui.wgsl  grating.wgsl  solid.wgsl  text.wgsl
server/src/: app.rs  color.rs  geom.rs  io_config.rs  ipc.rs  lib.rs  log_buffer.rs  main.rs  proto.rs  rig_config.rs  shutdown.rs  timing.rs  vtl_state.rs
server/src/render/: README.md  app_keys.rs  backend.rs  benchmark.rs  demo.rs  display_info.rs  file_browser.rs  mod.rs  null_backend.rs  overlay.rs  render_frame.rs  render_state.rs  scene_renderer.rs  state.rs  system_info.rs  system_metrics.rs  tess.rs  text_renderer.rs  ui_renderer.rs  vertex.rs
server/src/render/drm/: display.rs  display_guard.rs  drm_init.rs  drm_keyboard_input.rs  drm_render_loop.rs  drm_virtual_terminal.rs  init.rs  input.rs  mod.rs  vblank.rs  vk_buffers.rs  vk_init.rs  vt.rs
server/src/render/overlay_ui/: animation_dialog.rs  mod.rs  overlay.rs  overlay_state.rs  stimulus_dialog.rs
server/src/render/vk/: buffers.rs  context.rs  frame.rs  mod.rs  pipeline.rs  scene_cache.rs  text_atlas.rs  text_pipeline.rs  vk_instance.rs  vk_render_pipeline.rs  vk_text_atlas.rs  vk_text_pipeline.rs
server/src/render/winit_vk/: init.rs  mod.rs  winit_init.rs  winit_render_loop.rs
server/src/scene/: animation.rs  command.rs  mod.rs  photodiode.rs  scene_config.rs  scene_state.rs  state.rs  stimulus.rs  vtl_state.rs
server/src/scene/animation/: animation_action.rs  animation_advance.rs  animation_entry.rs  animation_kind.rs  animation_state.rs  mod.rs
server/src/scene/stimulus/: common.rs  grating.rs  mod.rs  primitive_shapes.rs  shape_appearance.rs  shape_stimulus.rs  stimulus.rs  stimulus_entry.rs  stimulus_flags.rs  stimulus_scene_entry.rs  transform2d.rs  types.rs
server/src/web/: mod.rs
server/tests/: animations.rs  commands.rs  config_compat.rs  config_roundtrip.rs  ipc.rs  vtl_staging.rs
server/tests/configs/: vstimd_reference_v1.config.json  vstimd_reference_v2.config.json
vtl/: Cargo.toml  README.md
vtl/examples/: vtl-test-client.rs
vtl/src/: client.rs  layout.rs  lib.rs  owner.rs  segment.rs
vtl/tests/: integration.rs
(+112 files in other folders)
