[package]
name = "vstimd"
version = "0.1.0"
edition = "2024"

[dependencies]
ash        = "0.38"
ash-window = "0.13"
bytemuck   = { version = "1", features = ["derive"] }
cosmic-text          = "0.12"
epaint_default_fonts = "0.34.2"
egui       = "0.34.2"
egui-winit = "0.34.2"
env_logger = "0.11"
indexmap   = "2"
lyon_tessellation = "1.0"
log        = "0.4"
prost      = "0.13"
vtl        = { path = "../vtl" }
nvml-wrapper = "0.10"
rand         = "0.10.1"
uuid         = { version = "1", features = ["v4"] }
sysinfo      = "0.30"
tokio      = { version = "1", features = ["rt", "time"] }
winit      = "=0.30.13"
zeromq     = "0.4"

# Linux-only dependencies for DRM/console mode and Wayland support
[target.'cfg(target_os = "linux")'.dependencies]
drm             = "0.15"
input           = "0.9"
libc            = "0.2"
wayland-backend = "=0.3.12"
wayland-client  = "=0.31.12"
wayland-sys     = "=0.31.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "tess"
harness = false

[build-dependencies]
prost-build = "0.13"
naga        = { version = "23", features = ["wgsl-in", "spv-out"] }
