[package]
name = "vstimd"
version = "0.1.0"
edition = "2024"
description = "Visual stimulus display server for neuroscience experiments"
license = "AGPL-3.0-only"
repository = "https://github.com/braemons/vstimd"

[features]
default = ["web"]
# Embedded HTTP + WebSocket control surface for the browser UI. Disable with
# `--no-default-features` to drop axum/futures-util and compile out src/web.
web = ["dep:axum", "dep:futures-util", "tokio/net", "tokio/macros"]
# Bake the built React UI (client/web/dist) into the binary and serve it at `/`.
# Requires the frontend to be built first: `cd client/web && npm run build`.
# Opt-in so a plain `cargo build` does not depend on the frontend being built.
embed-ui = ["web", "dep:rust-embed"]

[dependencies]
ash        = "0.38"
ash-window = "0.13"
bytemuck   = { version = "1", features = ["derive"] }
cosmic-text          = "0.12"
epaint_default_fonts = "0.34.2"
egui       = "0.34.2"
egui-winit = "0.34.2"
env_logger = "0.11"
bitflags   = "2"
anyhow     = "1"
indexmap   = { version = "2", features = ["serde"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
lyon_tessellation = "1.0"
log        = "0.4"
prost      = "0.13"
vtl        = { path = "../vtl", version = "0.1.0", features = ["serde"] }
nvml-wrapper = "0.10"
rand         = "0.10.1"
uuid         = { version = "1", features = ["v4", "serde"] }
sysinfo      = "0.30"
tokio      = { version = "1", features = ["rt", "sync", "time"] }
winit      = "=0.30.13"
zeromq     = "0.4"
axum         = { version = "0.8", features = ["ws"], optional = true }
futures-util = { version = "0.3", optional = true }
rust-embed   = { version = "8", features = ["mime-guess"], optional = true }

# Linux-only dependencies for DRM/console mode and Wayland support
[target.'cfg(target_os = "linux")'.dependencies]
drm             = "0.15"
input           = "0.9"
libc            = "0.2"
sd-notify       = "0.4"
wayland-backend = "=0.3.12"
wayland-client  = "=0.31.12"
wayland-sys     = "=0.31.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[build-dependencies]
prost-build = "0.13"
naga        = { version = "23", features = ["wgsl-in", "spv-out"] }

[package.metadata.deb]
name              = "braemons-vstimd"
maintainer        = "Joscha Schmiedt <joscha@schmiedt.dev>"
depends           = "$auto, libvulkan1, adduser"
recommends        = "vulkan-tools"
section           = "science"
priority          = "optional"
extended-description = """\
vstimd drives a display directly via VK_KHR_display without a compositor, \
providing sub-millisecond frame timing for psychophysics experiments.\n\
Communicates via ZMQ (port 5555) using a protobuf protocol. Supports \
Jetson Orin Nano, Raspberry Pi 4/5, and desktop NVIDIA/AMD GPUs."""
assets = [
    ["target/release/vstimd",                    "usr/bin/vstimd",                                             "755"],
    ["../packaging/sysusers/vstimd.conf",         "usr/lib/sysusers.d/vstimd.conf",                            "644"],
    ["../packaging/rsyslog/vstimd.conf",          "etc/rsyslog.d/10-vstimd.conf",                              "644"],
    ["../packaging/logrotate/vstimd",             "etc/logrotate.d/vstimd",                                    "644"],
    ["config/default-rig-config.toml",           "etc/braemons/vstimd-rig-config.toml",                       "644"],
    ["config/jetson-orin-nano.toml",             "usr/share/braemons/vstimd/jetson-orin-nano.toml",           "644"],
    ["config/raspberry-pi-5.toml",               "usr/share/braemons/vstimd/raspberry-pi-5.toml",             "644"],
    ["config/raspberry-pi-4.toml",               "usr/share/braemons/vstimd/raspberry-pi-4.toml",             "644"],
]
maintainer-scripts = "../packaging/debian/"

[package.metadata.deb.systemd-units]
unit-scripts = "../packaging/systemd/"
