[package]
name    = "vtl"
version = "0.1.0"
edition = "2024"
description = "Virtual Trigger Line shared-memory interface for vstimd"

[dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Memory",
] }

[[example]]
name = "vtl-test-client"
